[gd_scene load_steps=2 format=3 uid="uid://sdyq6qh25kh"]

[ext_resource type="Script" uid="uid://dgwt86b6f81mk" path="res://Entites/player/player.gd" id="1_73bmt"]

[node name="Node3D" type="Node3D"]
script = ExtResource("1_73bmt")

[node name="Camera3D" type="Camera3D" parent="."]
fov = 95.0

[node name="RayCastFront" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -2)
debug_shape_custom_color = Color(1, 0, 0, 1)

[node name="RayCastRight" type="RayCast3D" parent="."]
target_position = Vector3(2, 0, 0)
debug_shape_custom_color = Color(0, 1, 0, 1)

[node name="RayCastLeft" type="RayCast3D" parent="."]
target_position = Vector3(-2, 0, 0)
debug_shape_custom_color = Color(1, 1, 0, 1)

[node name="RayCastBack" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, 2)
debug_shape_custom_color = Color(0, 0, 1, 1)
